# flytezen

./: .dockerignore  .example.env  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  docker_build.sh  execute.py  execution_utils.py  flake.nix  mkdocs.yml  pyproject.toml  requirements-execute.txt  requirements.txt
.argo/: build.yaml  build.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  labels.yml  renovate.json
.github/actions/setup_environment/: action.yml
.github/disabled/: CD.yaml
.github/workflows/: CD.yaml  CI.yaml  CID.yaml  build-images.yaml  build.yaml  labeler.yml  workflow.yaml
containers/: Dockerfile  base.Dockerfile  compose.yaml  gpu.Dockerfile  pkg.Dockerfile
docs/: specification.md
docs/reference/: flytezen.md
environments/conda/: conda-linux-64.lock.yml  conda-lock.yml
scripts/: kaniko-build.yaml  localctl
src/flytezen/: __init__.py  __main__.py  configuration.py  constants.py  logging.py
src/flytezen/cli/: __init__.py  dataclass_dict.py  execute.py  execution_config.py  execution_utils.py
src/flytezen/workflows/: example.py  lrwine.py
tests/: test_cli.py  test_main.py
workflows/: lrwine.py
