[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  # "ARG",
  # "B",
  "C",
  "DTZ",
  # "E",
  "EM",
  # "F",
  # "FBT",
  "I",
  "ICN",
  "ISC",
  # "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  # "S",
  # "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["flytezen"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = [
  "numpyro",
  "numpyro.infer",
  "numpyro.distributions",
]
ignore_missing_imports = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
anndata = ">=0.10.2"
geomloss = ">=0.2.6"
igraph = ">=0.11.2"
lightning = ">=2.1.0"
louvain = ">=0.7.1"
pykeops = ">=2.1.2"
scanpy = ">=1.9.5"
scvelo = ">=0.2.5"
timm = ">=0.9.7"
torchsde = ">=0.2.6"
umap-learn = ">=0.5.4"

# dev dependencies
black = { version = ">=23.10.0", optional = true, extras = ["jupyter"] }
jupytext = { version = ">=1.15.2", optional = true }
jupyter_contrib_nbextensions = { version = ">=0.7.0", optional = true }
mkdocs-jupyter = { version = ">=0.24.6", optional = true }
mkdocs-material = { version = ">=9.4.6", optional = true }
mkdocstrings = { version = ">=0.23.0", optional = true, extras = ["python"] }
mypy = { version = ">=1.6.1", optional = true }
notebook = { version = "==6.4.13", optional = true }
pytest = { version = ">=7.4.2", optional = true }
pytest-asyncio = { version = ">=0.21.1", optional = true }
pytest-cov = { version = ">=4.1.0", optional = true }
ruff = { version = ">=0.1.0", optional = true }
xdoctest = { version = ">=1.1.1", optional = true }

# pipelines dependencies
zenml = { version = "==0.45.4", optional = true }

[tool.poetry.extras]
dev = [
  "black",
  "jupytext",
  "jupyter_contrib_nbextensions",
  "mkdocs-jupyter",
  "mkdocs-material",
  "mkdocstrings",
  "mypy",
  "notebook",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff",
  "xdoctest",
 ]
pipelines = [
  "zenml",
]

[tool.conda-lock]
channels = [
    'conda-forge', 'bioconda', 'nodefaults'
]
platforms = [
    'linux-64',
    'osx-arm64',
    'osx-amd64'
]

[tool.poetry.scripts]
flytezen = "flytezen.cli:main"

[tool.pytest.ini_options]
addopts = "--cov=src/flytezen/ --cov-report=term-missing"
asyncio_mode = "strict"

[tool.coverage.paths]
flytezen = ["src/flytezen", "*/flytezen/src/flytezen"]
tests = ["tests", "*/flytezen/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.coverage.run]
source_pkgs = ["flytezen", "tests"]
branch = true
parallel = true
omit = [
  "src/flytezen/__init__.py",
  "src/flytezen/__main__.py",
  "tests/conftest.py",
]

[tool.jupytext]
formats = "ipynb,text//py:percent,text//md"

[tool.poetry]
name = "flytezen"
version = "0.0.0"
packages = [
    { include = "flytezen", from = "src" },
]
description = "Library for benchmarking the impact of transcript count type stratification on trajectory inference."
authors = ["flytezen team"]
readme = "README.md"
homepage = "https://sciexp.github.io/flytezen/"
repository = "https://github.com/sciexp/flytezen"
license = "AGPL-3.0-only"
documentation = "https://sciexp.github.io/flytezen/"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

[tool.poetry.urls]
Changelog = "https://github.com/sciexp/flytezen/releases"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"
