[tool.black]
target-version = ["py37"]
line-length = 80
skip-string-normalization = true

[tool.docformatter]
black = true
wrap-summaries = 80
wrap-descriptions = 80
recursive = true
in-place = true
diff = true
make-summary-multi-line = true
pre-summary-newline = true

[tool.ruff]
target-version = "py37"
line-length = 80
select = [
  "A",
  # "ARG",
  # "B",
  "C",
  "DTZ",
  # "E",
  "EM",
  # "F",
  # "FBT",
  "F401",
  "I",
  "ICN",
  "ISC",
  # "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  # "S",
  # "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't modify unused imports
  # "F401",
]

[tool.ruff.isort]
known-first-party = ["flytezen"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.pyright]
include = ["src"]
exclude = [
       "**/node_modules",
       "**/__pycache__",
       "**/.hypothesis",
       "**/docs",
]
reportUnnecessaryTypeIgnoreComment = true
reportUnnecessaryIsInstance = false

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = [
]
ignore_missing_imports = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
dataclasses-json = ">=0.5.9"
flytekit = ">=1.10.0"
fsspec = "<2023.10.0"
hydra-zen = ">=0.11.0"
hydra-joblib-launcher = ">=1.2.0"
mashumaro = ">=3.10"
pandas = ">=1.5.3"
pyperclip = ">=1.8.2"
python-dotenv = "1.0.0"
rich = "13.6.0"
scikit-learn = ">=1.3.2"

# dev dependencies
black = { version = ">=23.10.0", optional = true, extras = ["jupyter"] }
jupytext = { version = ">=1.15.2", optional = true }
jupyter_contrib_nbextensions = { version = ">=0.7.0", optional = true }
mkdocs-jupyter = { version = ">=0.24.6", optional = true }
mkdocs-material = { version = ">=9.4.6", optional = true }
mkdocstrings = { version = ">=0.23.0", optional = true, extras = ["python"] }
mypy = { version = ">=1.6.1", optional = true }
notebook = { version = "==6.4.13", optional = true }
pyright = { version = ">=1.1.336", optional = true }
pytest = { version = ">=7.4.2", optional = true }
pytest-asyncio = { version = ">=0.21.1", optional = true }
pytest-cov = { version = ">=4.1.0", optional = true }
ruff = { version = ">=0.1.0", optional = true }
xdoctest = { version = ">=1.1.1", optional = true }

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = { version = ">=23.10.0", extras = ["jupyter"] }
mypy = ">=1.6.1"
pyright = ">=1.1.336"
ruff = ">=0.1.0"
docformatter = { version = ">=1.7.5", extras = ["tomli"] }

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=7.4.2"
pytest-asyncio = ">=0.21.1"
pytest-cov = ">=4.1.0"
xdoctest = ">=1.1.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
jupytext = ">=1.15.2"
jupyter_contrib_nbextensions = ">=0.7.0"
mkdocs-jupyter = ">=0.24.6"
mkdocs-material = ">=9.4.6"
mkdocstrings = { version = ">=0.23.0", extras = ["python"] }
notebook = "==6.4.13"

[tool.poetry.extras]
docs = [
  "jupytext",
  "jupyter_contrib_nbextensions",
  "mkdocs-jupyter",
  "mkdocs-material",
  "mkdocstrings",
  "notebook",
 ]

lint = [
  "black",
  "mypy",
  "pyright",
  "ruff",
 ]

test = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "xdoctest",
 ]

dev = [
  "black",
  "jupytext",
  "jupyter_contrib_nbextensions",
  "mkdocs-jupyter",
  "mkdocs-material",
  "mkdocstrings",
  "mypy",
  "notebook",
  "pyright",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff",
  "xdoctest",
 ]

[tool.conda-lock]
channels = [
    'conda-forge', 'bioconda', 'nodefaults'
]
platforms = [
    'linux-64',
    'osx-arm64',
    'osx-amd64'
]

[tool.poetry.scripts]
flytezen = "flytezen.cli:main"

[tool.pytest.ini_options]
addopts = "-rA --xdoc --cov=src/flytezen/ --cov-report=term-missing"
asyncio_mode = "strict"

[tool.coverage.paths]
flytezen = ["src/flytezen", "*/flytezen/src/flytezen"]
tests = ["tests", "*/flytezen/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.coverage.run]
source_pkgs = ["flytezen", "tests"]
branch = true
parallel = true
omit = [
  "src/flytezen/__init__.py",
  "src/flytezen/__main__.py",
  "tests/conftest.py",
]

[tool.jupytext]
formats = "ipynb,text//py:percent,text//md"

[tool.poetry]
name = "flytezen"
version = "0.0.1.dev1"
packages = [
    { include = "flytezen", from = "src" },
]
description = "Library for benchmarking the impact of transcript count type stratification on trajectory inference."
authors = ["flytezen team"]
readme = "README.md"
homepage = "https://sciexp.github.io/flytezen/"
repository = "https://github.com/sciexp/flytezen"
license = "AGPL-3.0-only"
documentation = "https://sciexp.github.io/flytezen/"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

[tool.poetry.urls]
Changelog = "https://github.com/sciexp/flytezen/releases"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"
